syntax = "proto3";

package task;

service TaskGRPCService {
  rpc FindOne (TaskId) returns (Task);
  rpc FindMany (TaskInfo) returns (TaskList);
}

message TaskId {
  int32 id = 1;
}

message TaskInfo {
  string title = 1;
  string assignUserId = 2;
}

message Task {
  int32 id = 1;
  string taskTitle = 2;
  string taskDescription = 3;
  bool isDeleted = 4;
  string assignUserId = 5;
}

message TaskList {
  repeated Task task = 1;
}